--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 camel:
   springboot:
     # The Camel context name
-    name: CamelRestSql
+    name: CamelRestServer
   component:
     servlet:
       mapping:
