--- a/src/main/fabric8/route.yml
+++ b/src/main/fabric8/route.yml
@@ -1,4 +1,7 @@
+metadata:
+  annotations:
+    router.openshift.io/cookie_name: JSESSIONID
 spec:
   to:
     kind: Service
-    name: spring-boot-camel-rest-server
+    name: rest-server
